ingress/ingress-eck.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hulk
  labels:
    app: hulk
  annotations:
    # Disable HTTP traffic
    #kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce-internal"
spec:
  rules:
    - host: "elasticsearch.hulk"
      http:
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: rahasak-elasticsearch-es-http
                port:
                  name: https
    - host: "kibana.hulk"
      http:
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: rahasak-elasticsearch-kb-http
                port:
                  name: https
